--- a/app/src/main/res/layout/fragment_workout_details.xml
+++ b/app/src/main/res/layout/fragment_workout_details.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.MyWorkoutsFragment">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tb_workoutToolbar"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        style="@style/Theme.GymDe.DefaultToolbar"
 
-        app:navigationIcon="@drawable/ic_arrow"
-        />
+        app:menu="@menu/workout_menu"
+        app:titleTextColor="@color/white"
 
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/tv_exerciseTitle"
@@ -25,32 +25,33 @@
 
         android:layout_margin="@dimen/small_margin"
         android:text="@string/exercises"
-        app:layout_constraintTop_toBottomOf="@id/tb_workoutToolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/tb_workoutToolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_exercise"
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
-        app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle"
+        android:layout_margin="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/tv_exerciseTitle" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/extended_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Corner.Top"
 
-        android:elevation="8dp"
-        android:layout_gravity="bottom|center_horizontal"
+        android:layout_margin="@dimen/small_margin"
         android:contentDescription="@string/new_workout_btn_description"
+        android:elevation="8dp"
         android:text="@string/new_exercise"
-        app:icon="@drawable/ic_plus"
+        app:backgroundTint="@color/orange"
+        android:src="@drawable/ic_plus"
+        app:tint="@color/white"
+
+
 
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
