--- a/app/src/main/res/layout/workouts_item.xml
+++ b/app/src/main/res/layout/workouts_item.xml
@@ -13,6 +13,7 @@
             android:id="@+id/iv_workout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:src="@drawable/workout_bg"
 
             android:contentDescription="@string/image_workout"
             android:scaleType="centerCrop" />
