--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -38,6 +38,9 @@
         <action
             android:id="@+id/action_workoutDetailsFragment_to_newExerciseFragment"
             app:destination="@id/newExerciseFragment" />
+        <action
+            android:id="@+id/action_workoutDetailsFragment_to_myWorkoutsFragment"
+            app:destination="@id/myWorkoutsFragment" />
     </fragment>
     <fragment
         android:id="@+id/newExerciseFragment"
