feat: fetch exercises firebase

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -47,12 +47,12 @@
         android:name="com.andreesperanca.gymde.ui.main.NewExerciseFragment"
         android:label="fragment_new_exercise"
         tools:layout="@layout/fragment_new_exercise" >
-        <argument
-            android:name="workoutId"
-            app:argType="string" />
         <action
             android:id="@+id/action_newExerciseFragment_to_workoutDetailsFragment"
             app:destination="@id/workoutDetailsFragment" />
+        <argument
+            android:name="workout"
+            app:argType="com.andreesperanca.gymde.models.Workout" />
     </fragment>
     <fragment
         android:id="@+id/createWorkoutFragment"
