--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,117 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        >
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/iv_logo"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content">
 
-                android:background="?attr/colorPrimary"
-                android:gravity="center"
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/iv_logo"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
 
-                app:layout_constraintTop_toTopOf="parent">
+                    android:background="?attr/colorPrimary"
+                    android:gravity="center"
 
-                <androidx.appcompat.widget.AppCompatImageView
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        android:src="@drawable/gym_de_logo" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_login"
+                    style="@style/TextAppearance.Material3.HeadlineLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
 
-                    android:src="@drawable/gym_de_logo" />
+                    android:layout_marginTop="@dimen/big_margin"
+                    android:text="@string/login"
+                    android:textStyle="bold"
 
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_login"
-                style="@style/TextAppearance.Material3.HeadlineLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="@dimen/big_margin"
-                android:text="@string/login"
-                android:textStyle="bold"
-
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_logo" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:layout_marginHorizontal="@dimen/big_margin"
-                android:layout_marginVertical="@dimen/medium_margin"
-                android:hint="@string/email"
-                app:layout_constraintTop_toBottomOf="@id/tv_login">
-
-                <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:inputType="textEmailAddress" />
+                    android:layout_marginHorizontal="@dimen/big_margin"
+                    android:layout_marginVertical="@dimen/medium_margin"
+                    android:hint="@string/email"
+                    app:layout_constraintTop_toBottomOf="@id/tv_login">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress" />
 
-                android:layout_marginHorizontal="@dimen/big_margin"
-                android:layout_marginVertical="@dimen/medium_margin"
-                android:hint="@string/password"
+                </com.google.android.material.textfield.TextInputLayout>
 
-                app:layout_constraintTop_toBottomOf="@id/til_email">
-
-                <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:inputType="textPassword" />
+                    android:layout_marginHorizontal="@dimen/big_margin"
+                    android:layout_marginVertical="@dimen/medium_margin"
+                    android:hint="@string/password"
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    app:layout_constraintTop_toBottomOf="@id/til_email">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_enter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
 
-                android:layout_marginHorizontal="@dimen/big_margin"
-                android:layout_marginTop="@dimen/medium_margin"
+                        android:inputType="textPassword" />
 
-                android:text="@string/enter"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/til_password" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/pg_loginProgressBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_enter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
 
-                android:indeterminate="true"
-                android:visibility="invisible"
+                    android:layout_marginHorizontal="@dimen/big_margin"
+                    android:layout_marginTop="@dimen/medium_margin"
 
-                app:layout_constraintTop_toTopOf="parent" />
+                    android:text="@string/enter"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/til_password" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/pg_loginProgressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:indeterminate="true"
+                    android:visibility="invisible"
+
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
