ref: refactor weight fragment

--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -65,7 +65,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/btn_advance"
+                android:id="@+id/btn_advanceWeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
