--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,78 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayout"
+<layout>
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/pg_progressBarHomeScreen"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            android:indeterminate="true"
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/pg_progressBarHome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-            />
+                android:indeterminate="true"
+                android:visibility="invisible"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_myWorkouts"
+                    style="@style/TextAppearance.Material3.TitleLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="@dimen/small_margin"
+                    android:text="@string/today_workouts"
+
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_workouts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/small_margin"
+
+                    app:layout_constraintTop_toBottomOf="@id/tv_myWorkouts" />
+
+
+                <include
+                    android:id="@+id/empty_data_parent"
+                    layout="@layout/empty_workout_item"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <TextView
-                android:id="@+id/tv_myWorkouts"
+                android:id="@+id/tv_healthArticles"
                 style="@style/TextAppearance.Material3.TitleLarge"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:layout_margin="@dimen/small_margin"
-                android:text="@string/today_workouts"
-
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:text="@string/health_articles" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_workouts"
+                android:id="@+id/rv_healthArticles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/small_margin"
+                android:layout_marginHorizontal="@dimen/small_margin" />
 
-                app:layout_constraintTop_toBottomOf="@id/tv_myWorkouts"
-                >
-            </androidx.recyclerview.widget.RecyclerView>
-
-
-            <include
-                android:id="@+id/empty_data_parent"
-                layout="@layout/empty_workout_item"
-                android:visibility="invisible"
-                android:layout_height="200dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="200dp" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        <TextView
-            android:id="@+id/tv_healthArticles"
-            style="@style/TextAppearance.Material3.TitleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_margin="@dimen/small_margin"
-            android:text="@string/health_articles" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_healthArticles"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/small_margin" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</ScrollView>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
+</layout>
